Fixed overflow from mobile devices in index

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ main header img {
     margin-top: 50px;
     padding: 10px;
     width: 100%;
-    height: 350px;
+    height: auto;
 }
 
 .articles_container {
@@ -213,7 +213,6 @@ main header img {
 
 .article_title {
     display: flex;
-    /* border: 1px solid red; */
     width: 40%;
     height: auto;
     justify-content: left;
@@ -225,8 +224,6 @@ main header img {
 @media only screen and (max-width: 1280px) and (min-width: 481px) {
     
     .show_articles{
-        /* border: 1px solid red; */
-        position: relative;
         background-color: white;
         display: flex;
         flex-direction: column;
@@ -278,12 +275,63 @@ main header img {
 
 @media screen and (max-width: 481px) {
 
-    main {
-        overflow-y: auto;
+    .articles {
+        position: relative;
+        overflow: scroll;
     }
 
     .show_articles{
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        gap: auto;
+        align-items: center;
+        padding: 10px;
+        width: 97%;
+        height: 80%;
+    }
+
+
+    .articles_container {
         position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 95%;
+        gap: 5px;
+    }
+
+    .pointer {
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: 21rem;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .article_box {
+        position: relative;
+        transition: height ease 0.5s, transform ease 0.5s, box-shadow ease 0.5s, opacity ease 0.3s;
+        box-shadow: 0px 2px 10px lightgray;
+        border-radius: 5px;
+        width: 250px;
+        height: 90%;
+        padding: 0px;
+    }
+    
+    .article_title {
+        display: flex;
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        font-size: 25px;
+        text-align: center;
+    } 
+
+    /* .show_articles{
         display: flex;
         flex-direction: column;
     }
@@ -295,11 +343,6 @@ main header img {
         width: 250px;
         height: 400px;
         gap: 5px;
-    }
-
-    .show_articles:nth-child(2) {
-        position: relative;
-        margin-top: 110%;
     }
 
     .pointer {
@@ -331,7 +374,7 @@ main header img {
 
     .hide {
         display: none;
-    }
+    } */
 }
 
 .article_box img {
@@ -813,21 +856,10 @@ form .information {
 
 /* End article */
 
-/* Customs */
-
-.width_300 {
-    width: 300px;
-}
-
-.height_150 {
-    height: 150px;
-}
-
-
 /* Footer */
 
 footer {
-    position: absolute;
+    position: relative;
     height: 100px;
     width: 100%;
     margin-bottom: auto;
@@ -839,12 +871,6 @@ footer {
     box-shadow: 1px 0px 2px 1px lightgrey;
     clear: both;
 }
-
-/* @media screen and (max-width: 481px) {
-    footer {
-        margin-bottom: -100%;
-    }
-} */
 
 .lower_footer {
     bottom: -150px
